Update White Wine Quality EDA and Data Preprocessing.ipynb

--- a/White Wine Quality EDA and Data Preprocessing.ipynb
+++ b/White Wine Quality EDA and Data Preprocessing.ipynb
@@ -29,8 +29,6 @@
    "source": [
     "# %%writefile preprocessing.py\n",
     "\n",
-    "#######################################\n",
-    "#######################################\n",
     "# Importing the Libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -42,9 +40,14 @@
     "plt.style.use('fivethirtyeight')\n",
     "\n",
     "# custom\n",
-    "from custom import helper\n",
-    "#######################################\n",
-    "#######################################"
+    "from custom import helper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading Dataset"
    ]
   },
   {
@@ -53,16 +56,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#######################\n",
-    "### Loading Dataset ###\n",
-    "#######################\n",
-    "\n",
     "raw_data = pd.read_csv(\"data/winequality-white.csv\", sep=';', index_col=None, encoding='ISO-8859-1', engine='python')\n",
-    "# raw_data.head()\n",
-    "\n",
+    "raw_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Creating a Copy of the Dataset\n",
     "df = raw_data.copy()\n",
-    "# df.head()"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating Folders to keep figures and tables"
    ]
   },
   {
@@ -71,27 +84,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###################################################\n",
-    "### Creating Folders to keep figures and tables ###\n",
-    "###################################################\n",
-    "\n",
     "helper.create_folder('./csv_tables/')\n",
     "helper.create_folder('./figures/')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "##################################################\n",
-    "### Getting Statistical Summary of the Dataset ###\n",
-    "##################################################\n",
-    "\n",
-    "data_description = df.describe(include='all', datetime_is_numeric=True)\n",
-    "data_description.to_csv(\"csv_tables/data_description.csv\", index=False)\n",
-    "# data_description"
+    "### Getting Statistical Summary of the Dataset"
    ]
   },
   {
@@ -100,10 +101,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#################################################\n",
-    "### Getting Column Names and their Data Types ###\n",
-    "#################################################\n",
-    "\n",
+    "data_description = df.describe(include='all', datetime_is_numeric=True)\n",
+    "data_description.to_csv(\"csv_tables/data_description.csv\", index=False)\n",
+    "data_description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting Column Names and their Data Types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dataset_columns = pd.DataFrame({'column_names':list(df.columns)})\n",
     "\n",
     "data_types = []\n",
@@ -113,7 +128,14 @@
     "\n",
     "dataset_columns['data_type'] = data_types\n",
     "dataset_columns.to_csv(\"csv_tables/column_heads_of_dataset.csv\", index=True)\n",
-    "# dataset_columns"
+    "dataset_columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking Missing Values"
    ]
   },
   {
@@ -122,13 +144,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###############################\n",
-    "### Checking Missing Values ###\n",
-    "###############################\n",
-    "\n",
     "missing_values = helper.missing_data(df)\n",
     "missing_values.to_csv(\"csv_tables/missing_values.csv\", index=True)\n",
-    "# missing_values"
+    "missing_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing Duplicated Values"
    ]
   },
   {
@@ -137,26 +162,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##################################\n",
-    "### Removing Duplicated Values ###\n",
-    "#################################\n",
-    "\n",
     "df.drop_duplicates(keep='first', inplace=True)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#############################\n",
-    "### Checking Outlier Info ###\n",
-    "#############################\n",
-    "\n",
-    "outliers = helper.outlier_info(df)\n",
-    "outliers.to_csv(\"csv_tables/outlier_info.csv\", index=True)\n",
-    "# outliers"
+    "### Checking Outlier Info"
    ]
   },
   {
@@ -165,10 +178,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##########################\n",
-    "### Detecting Outliers ###\n",
-    "##########################\n",
-    "\n",
+    "outliers = helper.outlier_info(df)\n",
+    "outliers.to_csv(\"csv_tables/outlier_info.csv\", index=True)\n",
+    "outliers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Detecting Outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "helper.detect_outliers(\n",
     "    df.select_dtypes(np.number),\n",
     "    image_name='Outlier',\n",
@@ -185,15 +212,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation of Dataset Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#######################################\n",
-    "### Correlation of Dataset Features ###\n",
-    "#######################################\n",
-    "\n",
     "helper.correlation_viz(\n",
     "    df.select_dtypes(np.number),\n",
     "    image_name='Data_Features_Correlation',\n",
@@ -208,24 +238,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "############################################\n",
-    "### Distribution Plot of Target Variable ###\n",
-    "############################################\n",
-    "\n",
-    "plt.figure(figsize=(15, 10), dpi=300)\n",
-    "\n",
-    "sns.distplot(df['quality'], color='darkorange', bins=30)\n",
-    "plt.title('Distribution of quality', fontsize=22)\n",
-    "\n",
-    "plt.grid(color='grey')\n",
-    "\n",
-    "plt.savefig('figures/Distribution_Plot_of_quality.png', dpi=600, transparent=True)\n",
-    "# plt.show()"
+    "### Distribution Plot of Target Variable "
    ]
   },
   {
@@ -234,10 +250,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#####################################\n",
-    "### Count Plot of Target Variable ###\n",
-    "#####################################\n",
+    "plt.figure(figsize=(15, 10), dpi=300)\n",
     "\n",
+    "sns.distplot(df['quality'], color='darkorange', bins=30)\n",
+    "plt.title('Distribution of quality', fontsize=22)\n",
+    "\n",
+    "plt.grid(color='grey')\n",
+    "\n",
+    "plt.savefig('figures/Distribution_Plot_of_quality.png', dpi=600, transparent=True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count Plot of Target Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def count_plot(column_name):\n",
     "\n",
     "    fig = plt.figure(figsize=(10, 8), dpi=300)\n",
@@ -264,25 +300,16 @@
     "    \n",
     "    \n",
     "    plt.savefig(f'figures/{column_name}_count_plot', dpi=600, transparent=True)\n",
-    "#     plt.show()\n",
+    "    plt.show()\n",
     "\n",
     "count_plot('quality')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#############################################\n",
-    "### Creating Target Label for the Dataset ###\n",
-    "#############################################\n",
-    "\n",
-    "mean_value_of_quality = df['quality'].mean()\n",
-    "targets = np.where(df['quality'] > mean_value_of_quality, 1, 0)\n",
-    "df['quality_rate'] = targets\n",
-    "# df.head()"
+    "### Creating Target Label for the Dataset"
    ]
   },
   {
@@ -291,23 +318,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#################################################\n",
-    "### Count Plot of the Created Target Variable ###\n",
-    "#################################################\n",
+    "mean_value_of_quality = df['quality'].mean()\n",
     "\n",
+    "targets = np.where(df['quality'] > mean_value_of_quality, 1, 0)\n",
+    "\n",
+    "df['quality_rate'] = targets\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count Plot of the Created Target Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "count_plot('quality_rate')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Statistics per target variable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##############################################\n",
-    "### Feature Statistics per target variable ###\n",
-    "##############################################\n",
-    "\n",
     "features_mean_stats = df.groupby('quality_rate').mean()\n",
     "features_mean_stats.to_csv(\"csv_tables/features_mean_stats_per_target_variable.csv\", index=True)\n",
     "# features_mean_stats\n",
@@ -338,7 +386,7 @@
     "        ax.annotate(f'{round(height, 3)}', (x + width/2, y + height*1.02), ha='center')\n",
     "    \n",
     "    plt.savefig(f'figures/Mean Value of {col} per Target Label.png', dpi=600, transparent=True)\n",
-    "#     plt.show()\n",
+    "    plt.show()\n",
     "\n",
     "features_std_stats = df.groupby('quality_rate').std()\n",
     "\n",
@@ -347,15 +395,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot of Feature Statistics per Target Variable"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "######################################################\n",
-    "### Plot of Feature Statistics per Target Variable ###\n",
-    "######################################################\n",
-    "\n",
     "column_names = list(df.iloc[:, :11].columns.values)\n",
     "\n",
     "labels = ['high_rate', 'low_rate']\n",
@@ -390,7 +441,7 @@
     "    plt.tight_layout()\n",
     "    \n",
     "    plt.savefig('figures/'+column_name+'Distribution of high_rate_low_rate_quality.png', dpi=600, transparent=True)\n",
-    "#     plt.show()"
+    "    plt.show()"
    ]
   },
   {
