--- a/White Wine Quality EDA and Data Preprocessing.ipynb
+++ b/White Wine Quality EDA and Data Preprocessing.ipynb
@@ -445,17 +445,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###############################################\n",
-    "### Creating a Copy of the modified Dataset ###\n",
-    "###############################################\n",
-    "\n",
-    "df_modified = df.copy()\n",
-    "# df_modified.head(15)"
+    "### Creating a Copy of the modified Dataset"
    ]
   },
   {
@@ -464,10 +457,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##########################################\n",
-    "### Saving the Modified Dataset as csv ###\n",
-    "##########################################\n",
-    "\n",
+    "df_modified = df.copy()\n",
+    "df_modified.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving the Modified Dataset as csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_modified.to_csv(\"data/preprocessed_data.csv\", index=False)"
    ]
   }
