--- a/White Wine Quality Prediction.ipynb
+++ b/White Wine Quality Prediction.ipynb
@@ -29,8 +29,6 @@
    "source": [
     "# %%writefile train.py\n",
     "\n",
-    "#####################################################################################\n",
-    "#####################################################################################\n",
     "# Loading the iconic trio 🔥\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -60,9 +58,14 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
-    "import pickle\n",
-    "#####################################################################################\n",
-    "#####################################################################################"
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading Data"
    ]
   },
   {
@@ -71,12 +74,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#################### \n",
-    "### Loading Data ###\n",
-    "####################\n",
-    "\n",
     "preprocessed_data = pd.read_csv(\"data/preprocessed_data.csv\")\n",
-    "# preprocessed_data.head()"
+    "preprocessed_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating a Copy of the Loaded Data"
    ]
   },
   {
@@ -85,12 +91,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##########################################\n",
-    "### Creating a Copy of the Loaded Data ###\n",
-    "##########################################\n",
-    "\n",
     "data_with_targets = preprocessed_data.copy()\n",
-    "# data_with_targets.head()"
+    "data_with_targets.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dropping `quality` Column"
    ]
   },
   {
@@ -99,12 +108,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#################################\n",
-    "### Dropping `quality` Column ###\n",
-    "#################################\n",
-    "\n",
     "data_with_targets = data_with_targets.drop(['quality'], axis=1)\n",
-    "# data_with_targets.head()"
+    "data_with_targets.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Splitting the Data into Feature Matrix and Target Label"
    ]
   },
   {
@@ -113,10 +125,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###############################################################\n",
-    "### Splitting the Data into Feature Matrix and Target Label ###\n",
-    "###############################################################\n",
-    "\n",
     "target_variable = 'quality_rate'\n",
     "\n",
     "# Unscaled Features\n",
@@ -127,15 +135,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SMOTE Sampling to deal with imbalance classes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#####################################################\n",
-    "### SMOTE Sampling to deal with imbalance classes ###\n",
-    "#####################################################\n",
-    "\n",
     "# Setting Seed Value\n",
     "seed = 81\n",
     "\n",
@@ -145,16 +156,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "##########################################\n",
-    "### Splitting into Train and Test sets ###\n",
-    "##########################################\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = model_selection.train_test_split(resampled_X, resampled_y, test_size=0.3, stratify=resampled_y, random_state=seed)"
+    "### Splitting into Train and Test sets"
    ]
   },
   {
@@ -163,10 +168,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "####################################\n",
-    "### Scalling Train and Test sets ###\n",
-    "####################################\n",
-    "\n",
+    "X_train, X_test, y_train, y_test = model_selection.train_test_split(resampled_X, resampled_y, test_size=0.3, stratify=resampled_y, random_state=seed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scalling Train and Test sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "column_names = list(X.columns.values)\n",
     "\n",
     "scaler = StandardScaler()\n",
@@ -186,15 +203,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modelling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#################\n",
-    "### Modelling ###\n",
-    "#################\n",
-    "\n",
     "# Instantiating baseline models\n",
     "models = [\n",
     "    (\"Decision Tree\", tree.DecisionTreeClassifier(random_state=seed)),\n",
@@ -220,15 +240,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting Train and Test Accuracies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##########################################\n",
-    "### Plotting Train and Test Accuracies ###\n",
-    "##########################################\n",
-    "\n",
     "helper.plot_model_summary(\n",
     "    model_summary=model_summary, \n",
     "    figsize=(20, 14), \n",
@@ -241,15 +264,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting Feature Importance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###################################\n",
-    "### Plotting Feature Importance ###\n",
-    "###################################\n",
-    "\n",
     "helper.plot_feature_importance(\n",
     "    df_model_features_with_importance, \n",
     "    figsize=(20, 15), \n",
@@ -262,25 +288,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "##############################\n",
-    "### Getting Top 6 Features ###\n",
-    "##############################\n",
-    "\n",
-    "top_6_features = list(feature_importance_of_models['GradientBoosting'].head(6))\n",
-    "# top_6_features\n",
-    "\n",
-    "normalized_X_train_new = normalized_X_train[top_6_features]\n",
-    "# normalized_X_train_new.head()\n",
-    "\n",
-    "normalized_X_test_new = normalized_X_test[top_6_features]\n",
-    "# normalized_X_test_new.head()\n",
-    "\n",
-    "# X_train_new, X_test_new, y_train_new, y_test_new = model_selection.train_test_split(X_new, y, test_size=0.2, stratify=y, random_state=80)"
+    "### Getting Top 6 Features"
    ]
   },
   {
@@ -289,24 +300,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "############################\n",
-    "### Creating New Folders ###\n",
-    "############################\n",
-    "\n",
+    "top_6_features = list(feature_importance_of_models['GradientBoosting'].head(6))\n",
+    "top_6_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalized_X_train_new = normalized_X_train[top_6_features]\n",
+    "normalized_X_train_new.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalized_X_test_new = normalized_X_test[top_6_features]\n",
+    "normalized_X_test_new.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X_train_new, X_test_new, y_train_new, y_test_new = model_selection.train_test_split(X_new, y, test_size=0.2, stratify=y, random_state=80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating New Folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "helper.create_folder('./new_csv_tables/')\n",
     "helper.create_folder('./new_figures/')"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modelling on Top 6 Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###################################\n",
-    "### Modelling on Top 6 Features ###\n",
-    "###################################\n",
-    "\n",
     "feature_importance_of_models_new, model_features_with_importance_new, model_summary_new = helper.baseline_performance(\n",
     "    models=models, \n",
     "    X_train=normalized_X_train_new, \n",
@@ -322,15 +378,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting Train and Test Accuracies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##########################################\n",
-    "### Plotting Train and Test Accuracies ###\n",
-    "##########################################\n",
-    "\n",
     "helper.plot_model_summary(\n",
     "    model_summary=model_summary_new, \n",
     "    figsize=(20, 14), \n",
@@ -343,15 +402,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting Feature Importance"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###################################\n",
-    "### Plotting Feature Importance ###\n",
-    "###################################\n",
-    "\n",
     "helper.plot_feature_importance(\n",
     "    feature_importance=model_features_with_importance_new, \n",
     "    figsize=(20, 14), \n",
@@ -364,15 +426,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross Validating Models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###############################\n",
-    "### Cross Validating Models ###\n",
-    "###############################\n",
-    "\n",
     "# Splitting data into 10 folds\n",
     "cv_kfold = model_selection.KFold(n_splits=10, shuffle=True, random_state=150)\n",
     "\n",
@@ -418,7 +483,14 @@
     "cv_results.to_csv(\"csv_tables/cross_validation_results.csv\", index=True)\n",
     "\n",
     "# Showing the final results\n",
-    "# cv_results"
+    "cv_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Choosing Classifier to Evaluate"
    ]
   },
   {
@@ -427,10 +499,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#######################################\n",
-    "### Choosing Classifier to Evaluate ###\n",
-    "#######################################\n",
-    "\n",
     "# classifier = models[2][1]\n",
     "    \n",
     "classifier = models[4][1]\n",
@@ -439,18 +507,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting Train and Test Accuracy of the Choosen Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "############################################################\n",
-    "### Getting Train and Test Accuracy of the Choosen Model ###\n",
-    "############################################################\n",
-    "\n",
     "train_accuracy = classifier.score(normalized_X_train_new, y_train)\n",
     "\n",
     "test_accuracy = classifier.score(normalized_X_test_new, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluating Classifier"
    ]
   },
   {
@@ -459,10 +537,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#############################\n",
-    "### Evaluating Classifier ###\n",
-    "#############################\n",
-    "\n",
     "helper.evaluate_classifier(\n",
     "    estimator=classifier, \n",
     "    X_test=normalized_X_test_new, \n",
